--- a/CourseFeedback/WebContent/template/commonTemplate.xhtml
+++ b/CourseFeedback/WebContent/template/commonTemplate.xhtml
@@ -8,7 +8,7 @@
 <!-- Basic template for all pages -->
 
 <h:head>
-	<title>Page Title</title>
+	<title>Common template</title>
 </h:head>
 
 <h:body>
